<resources>
    <string name="app_name">Random Movie</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">ПОДОБРАТЬ</string>
    <string name="tab_text_2">ПОПУЛЯРНОЕ</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="button_random">Подобрать</string>
    <string name="cast_title">В главных ролях</string>
    <string name="removed_from_favorite">Удалено из избранного</string>
    <string name="added_to_favorite">Добавлено в избранное</string>
    <string name="random_movie_title">Подбор</string>
    <string name="top_movies">Популярные</string>
    <string name="profile_title">Профиль</string>
    <string name="favorite_title">Избранное</string>
    <string name="login_button_title">Войти</string>
    <string name="singup_title">Зарегистрироваться</string>

    <string-array name="movie_genres">
        <item>Жанр</item>
        <item>Боевик</item>
        <item>Приключения</item>
        <item>Мультфильм</item>
        <item>Комедия</item>
        <item>Криминал</item>
        <item>Документальный</item>
        <item>Драма</item>
        <item>Семейный</item>
        <item>Фэнтези</item>
        <item>История</item>
        <item>Ужасы</item>
        <item>Музыка</item>
        <item>Детектив</item>
        <item>Мелодрама</item>
        <item>Фантастика</item>
        <item>Телевизионный</item>
        <item>Триллер</item>
        <item>Военный</item>
        <item>Вестерн</item>
    </string-array>

</resources>
