<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0B0945">


    <Button
            android:text="@string/button_random"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:id="@+id/button_random"
            android:background="#F42424"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="331dp"/>
    <Spinner
            android:layout_width="150dp"
            android:textAlignment="center"
            android:prompt="@string/genre"
            android:layout_height="40dp"
            android:id="@+id/spinner_genre"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="#F42424"
    />
    <Spinner
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:prompt="@string/year"
            android:background="#F42424"
            android:id="@+id/spinner_year"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"/>

    <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_width="200dp"
            card_view:cardCornerRadius="4dp"
            android:layout_height="320dp"
            android:visibility="gone"
            android:foreground="?attr/selectableItemBackground"
            android:layout_marginBottom="130dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/spinner_year">

        <RelativeLayout
                android:layout_width="204dp"
                android:layout_height="match_parent">

            <ImageView
                    android:id="@+id/card_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/card_image_height"
                    android:scaleType="centerCrop"
                    android:layout_marginTop="0dp"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/ic_launcher_background"/>

            <TextView
                    android:id="@+id/card_title"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:textSize="14sp"
                    android:layout_alignBottom="@+id/card_image"
                    android:layout_marginLeft="@dimen/md_keylines"
                    tools:text="Название фильма"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="#000"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="1dp"
                    android:layout_marginBottom="-39dp"/>
            <ImageButton
                    android:id="@+id/bookmark_image"
                    android:layout_width="58dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="0dp"
                    app:srcCompat="@drawable/ic_bookmark_black_24dp"
                    android:layout_alignParentRight="true"
                    style="?android:attr/borderlessButtonStyle"
                    android:tint="@color/button_grey"
                    android:layout_marginEnd="3dp"
                    android:layout_marginTop="6dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="5dp"
            />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>